--- a/scss/btn.scss
+++ b/scss/btn.scss
@@ -12,4 +12,17 @@
 		width: 100%;
 		margin-top: 30px;
 	}
+	&--small{
+		width: 80px;
+		box-sizing: border-box;
+		text-transform: uppercase;
+		padding: 15px 15px;
+
+	}
+	&--pagination{
+		width: 40px;
+		line-height: 10px;
+		height: 40px;
+		box-sizing: border-box;
+	}
 }
